package br.com.marianadmoreira.questao3.Decorator;

public interface Attack {
    void execute();
}
