package br.com.marianadmoreira.questao3.Decorator;

public class Basic implements Attack{

    public void execute() {
        System.out.println("Ataque Básico!");
    }

    
}
